<resources>
    <string name="app_name">Chattety</string>
    <string name="app_name_chatte">Chatte</string>
    <string name="app_name_ty">ty</string>
    <string name="app_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati explicabo eveniet, suscipit accusantium id dicta? Vel quae laudantium fuga perspiciatis. Voluptatem doloribus nam laboriosam soluta, neque itaque quo ad labore.</string>
    <string name="next">suivant</string>
    <string name="skip">Sauter</string>
    <string name="sign_in_with_google">continuer avec google</string>
    <string name="sign_in">se connecter</string>
    <string name="your_email_address">Votre addresse email</string>
    <string name="dont_have">Vous n\'avez pas de </string>
    <string name="account">compte ?</string>
    <string name="password">Mot de passe</string>
    <string name="username">Votre nom d\'utilisateur</string>
    <string name="i_got">j\'ai un</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="errors">Errors</string>
    <string name="web_client_id">79773863575-r6khhcckc4h0pi51hp5859d0jbaojqp5.apps.googleusercontent.com</string>
    <string name="home">Accueil</string>
    <string name="search">Recherche</string>
    <string name="post">Poster</string>
    <string name="chat">Chat</string>
    <string name="settings">Parametre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_ago">Il ya 10 minutes</string>
    <string name="post_username">Zgenius</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="privacy">Politique de confidentialites</string>
    <string name="developpers">Developpeurs</string>
    <string name="termes">Termes et conditions</string>
    <!--    <string name="default_web_client_id">120074054541-8sgu0m4j25f18mg7aqo62v0un0fo4hif.apps.googleusercontent.com</string>-->
</resources>