<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/homeFragment"
        android:icon="@drawable/domicile"
        android:title="@string/home" />

    <item
        android:id="@id/searchFragment"
        android:icon="@drawable/loupe"
        android:title="@string/search" />

    <item
        android:id="@id/addPostFragment"
        android:icon="@drawable/addition"
        android:title="@string/post" />

    <item
        android:id="@id/chatFragment"
        android:icon="@drawable/chat"
        android:title="@string/chat" />

    <item
        android:id="@id/settingsFragment"
        android:icon="@drawable/setting"
        android:title="@string/settings" />
</menu>