<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    tools:context=".activities.SignInActivity">


    <!--    app logo -->
    <LinearLayout
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/app_name_chatte"
            android:textColor="@color/dark"
            android:textSize="@dimen/_50dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/app_name_ty"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_50dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/app_auth_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:text="@string/app_description"
        android:layout_marginBottom="@dimen/default_margin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email_address"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_auth_description">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/your_email_address"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_email_address">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/error_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errors"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:visibility="gone"
        android:textSize="18sp"
        android:layout_below="@id/layout_password"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:text="@string/sign_in"
        android:textColor="@color/dark"
        android:layout_below="@id/error_txt"
        android:layout_height="60dp"/>

    <LinearLayout
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/dark"
            android:layout_height="wrap_content"
            android:text="@string/dont_have"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/main_color"/>
    </LinearLayout>

</RelativeLayout>