<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/default_margin"
    tools:context=".activities.RegisterWithGoogleActivity">

    <!--    app logo -->
    <LinearLayout
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/app_name_chatte"
            android:textColor="@color/dark"
            android:textSize="@dimen/_50dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/app_name_ty"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_50dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/app_auth_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/app_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_auth_description"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_email_address"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_email_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_username"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Date de naissance"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/error_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_date"
        android:layout_marginTop="10dp"
        android:text="@string/errors"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/error_txt"
        android:text="@string/sign_up"
        android:textColor="@color/dark" />


</RelativeLayout>