<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/default_margin"
    tools:context=".activities.UserPreferenceActivity">


    <!--    app logo -->
    <LinearLayout
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/app_name_chatte"
            android:textColor="@color/dark"
            android:textSize="@dimen/_50dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_bold"
            android:text="@string/app_name_ty"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_50dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/app_auth_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/app_description" />

    <Spinner
        android:id="@+id/ages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_auth_description"
        android:layout_marginTop="10dp"
        android:background="@color/grey" />


    <Spinner
        android:id="@+id/people_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ages"
        android:layout_marginTop="10dp"
        android:background="@color/grey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/people_type"
        android:text="sauvegarder"
        android:textColor="@color/dark" />

</RelativeLayout>